# perf-ubiquity

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  fixtures.py  local_secrets.json  locust-start.sh  locust_config.py  locust_postgres_test.py  locustfile.py  locustfile_barclays.py  locustfile_peak_hour.py  locustfile_peak_hour_bak.py  locustfile_peak_second.py  locustfile_threading.py  pyproject.toml  settings.py  setup.py  style.sh  tox.ini  vault.py
.github/workflows/: ci.yaml
cli/: commands.py
data_population/: create_tsv.py  data_population_config.py  database_tables.py  encryption.py  fixtures.py  generate_harmonia_data.py  job_creation.py  upload_tsv.py  vault_setup.py
data_population/create_data/: create_association.py  create_channel.py  create_mcard.py  create_pcard.py  create_plan.py  create_service.py
data_population/daedalus/: create_data.py  create_tsv.py  upload_tsv.sh  vault_setup.py
data_population/fixtures/: client.py  membership_card.py  membership_plan.py  payment_card.py  payment_scheme.py  user.py
data_population/hermes/: create_data.py  create_tsv.py  upload_tsv.sh
data_population/hermes/create_data/: __init__.py  associations.py  channel.py  create_association.py  create_mcard.py  create_pcard.py  create_plan.py  create_service.py  membership_card.py  payment_card.py  service.py
data_population/row_generation/: create_association.py  create_channel.py  create_mcard.py  create_pcard.py  create_plan.py  create_service.py
data_population/tsv_generation/: common.py  hades.py  hermes.py  hermes_history.py
db/daedalus/: README.md  create_data.py  create_tsv.py  upload_tsv.sh
db/hermes/: create_data.py  create_tsv.py  upload_tsv.sh
environment/: angelia_token_generation.py
locust_angelia/: locustfile.py  locustfile_peak_hour.py  locustfile_test.py  user_behaviour.py
locust_angelia/database/: db.py  jobs.py  models.py
locust_ubiquity/: locustfile_barclays.py  locustfile_peak_hour.py  locustfile_peak_second.py  locustfile_threading.py
request_data/: angelia.py  hermes.py  locust_setup_requests.py  membership_card.py  membership_plan.py  payment_card.py  service.py
ubiquity_performance_test/: angelia_token_generation.py  config.py  locust_config.py  settings.py  vault.py
ubiquity_performance_test/cli/: commands.py
ubiquity_performance_test/data_population/: data_population_config.py  database_tables.py  encryption.py  generate_harmonia_data.py  job_creation.py  upload_tsv.py
ubiquity_performance_test/data_population/fixtures/: client.py  membership_plan.py  payment_scheme.py  user.py
ubiquity_performance_test/data_population/row_generation/: create_association.py  create_channel.py  create_mcard.py  create_pcard.py  create_plan.py  create_service.py
ubiquity_performance_test/locust_angelia/: locustfile.py  locustfile_test.py  user_behaviour.py
ubiquity_performance_test/locust_angelia/database/: jobs.py  (+2 more)
ubiquity_performance_test/locust_ubiquity/: locustfile_barclays.py  locustfile_peak_hour.py  locustfile_peak_second.py  locustfile_threading.py
ubiquity_performance_test/request_data/: angelia.py  hermes.py  locust_setup_requests.py  membership_card.py  payment_card.py  service.py
(+4 files in other folders)
